# GMR-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.before_gmr  CODEX_FIX_GEM_E1_ALIGNMENT.md  CODEX_GEM_GMR_E1_TASK.md  CODEX_GEM_JOINT_TO_SEGMENT_E1.md  CODEX_SMPLX_G1_REFERENCE_THEN_E1.md  CODEX_SMPLX_TO_E1_MANUAL_V3.md  CODEX_SMPL_DIRECT_TO_E1_AND_XSENS_OPTION.md  README.md  build.sh  run.sh  run_e1.sh  run_fzmotion_e1.sh  run_fzmotion_g1.sh  run_gem.sh  run_gem_segments_e1.sh  run_pico.sh  run_pico_e1.sh  run_smpl_direct_e1.sh  run_smplx_bumi3.sh  run_smplx_bumi3_jump.sh  run_smplx_e1.sh  run_smplx_e1_manual_v3.sh  run_smplx_g1.sh  run_xsens.sh  run_xsens_e1.sh  run_xsens_e1_jump.sh  run_xsens_jump.sh  smplx_to_bumi3.json
apps/: fzmotion_server.cpp  gem_server.cpp  mocap_server.cpp  pico_mocap_server.cpp  smplx_server.cpp  xsens_server.cpp
assets/bumi3/: CMakeLists.txt  bumi copy.py  bumi.py  package.xml
assets/bumi3/config/: joint_names_BUMI_V3.0_260119.yaml
assets/bumi3/launch/: display.launch  gazebo.launch
assets/bumi3/meshes/: BUMI(1)_5.26.urdf  BUMI_V3.0_260119GG.urdf  base_link.STL  l_ankle_pitch_link.STL  l_ankle_roll_link.STL  l_arm_pitch_link.STL  l_arm_roll_link.STL  l_arm_yaw_link.STL  l_elbow_pitch_link.STL  l_knee_pitch_link.STL  l_leg_pitch_link.STL  l_leg_roll_link.STL  l_leg_yaw_link.STL  r_ankle_pitch_link.STL  r_ankle_roll_link.STL  r_arm_pitch_link.STL  r_arm_roll_link.STL  r_arm_yaw_link.STL  r_elbow_pitch_link.STL  r_knee_pitch_link.STL  r_leg_pitch_link.STL  r_leg_roll_link.STL  r_leg_yaw_link.STL  waist_yaw_link.STL
assets/bumi3/mjcf/: bumi3.xml  mjmodel.xml
assets/bumi3/urdf/: BUMI_V3.0_260119.csv  bumi.urdf
assets/e1/: e1.py  package.xml
assets/e1/config/: joint_names_e1_asm.yaml
assets/e1/launch/: display.launch  gazebo.launch
assets/e1/meshes/: e1_origin.urdf
assets/e1/mjcf/: e1_23dof.xml  e1_24dof.xml  e1_24dof_from_urdf.xml
assets/e1/urdf/: e1_23dof.urdf  e1_24dof.urdf
build_codex/: CMakeCache.txt  Makefile  cmake_install.cmake  xsens_mocap_server
build_pico_codex/: CMakeCache.txt  Makefile  cmake_install.cmake
config/ik_configs/: fbx_to_e1.json  fbx_to_e1_23dof.json  fbx_to_e1_fzmotion.json  gem_segments_to_e1.json  gem_segments_to_e1_calibrated.json  gem_segments_to_e1_position_debug.json  gem_to_e1_position.json  gem_to_g1_position.json  smpl_direct_to_e1.json  smplx_to_bumi3.json  smplx_to_bumi3_jump.json  smplx_to_e1.json  smplx_to_e1_manual_v3.json  smplx_to_g1.json  xrobot_to_e1.json  xsens_to_e1.json  xsens_to_e1_jump.json  xsens_to_g1_jump.json
config/ik_configs/calibrated/: fbx_to_g1.json
config/robot_presets/: bumi3.json
docs/: GEM_TO_E1.md  SMPLX_E1_MANUAL_CONFIG_REASONING.md  SMPLX_TO_BUMI3.md  XSENS_AND_SMPL_FRAMES.md  XSENS_JUMP_CONFIG_DIFF.md
include/gmr/: body_map.hpp  frame_queue.hpp  gmr_mink.hpp  motion_buffer.hpp  mujoco_viewer.hpp  redis_publisher.hpp
logs/: redis_root_pos_20260527_165553.csv  redis_root_pos_20260527_165915.csv
readers/: base_reader.hpp  dummy_reader.hpp  fzmotion_reader.cpp  fzmotion_reader.hpp  gem_reader.cpp  gem_reader.hpp  optitrack_reader.cpp  optitrack_reader.hpp  pico_reader.cpp  pico_reader.hpp  smplx_reader.cpp  smplx_reader.hpp  xsens_reader.cpp  xsens_reader.hpp
scripts/: auto_calibrate.py  calibrate_gem_e1_scales.py  calibrate_gem_rot_offsets.py  calibrate_gem_scales.py  calibrate_gem_segments_to_e1.py  compare_smplx_e1_configs.py  compare_xsens_jump_configs.py  generate_smplx_to_bumi3_jump.py  inspect_bumi3_model.py  record_redis_root_pos.py  send_gem_test_packet.py  test_smplx_to_e1_manual_v3.py  validate_smplx_to_bumi3.py
tests/: gem_reader_protocol_test.cpp  ground_clearance_test.cpp  smplx_bumi3_config_test.cpp  smplx_reader_protocol_test.cpp
